--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,25 @@
-name: Publish package to GitHub Packages
-on:
-  release:
-    types: [created]
+name: Test Jacado
+on: push
+
 jobs:
   publish:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
 
-      - name: Publish package
+      - name: Test
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
-          arguments: publish
-        env:
-          ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER }}
-          ARTIFACTORY_PW: ${{ secrets.ARTIFACTORY_PW }}
+          arguments: test
