--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -42,14 +42,17 @@ publishing {
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.13.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.2'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.1'
     implementation 'com.fasterxml.jackson:jackson-bom:2.13.2'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.2'
     implementation 'com.arangodb:arangodb-java-driver:6.16.1'
     implementation 'com.arangodb:jackson-dataformat-velocypack:3.0.0'
     implementation 'org.reflections:reflections:0.10.2'
-    implementation "ch.qos.logback:logback-classic:1.2.3"
-    implementation "ch.qos.logback:logback-core:1.2.3"
+    implementation 'ch.qos.logback:logback-classic:1.2.9'
+    implementation 'ch.qos.logback:logback-core:1.2.9'
+    implementation 'net.jodah:typetools:0.6.3'
+    implementation 'com.aventrix.jnanoid:jnanoid:2.0.0'
+    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:3.0.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
@@ -62,7 +65,7 @@ dependencies {
     api "org.testcontainers:testcontainers:1.16.0"
 
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.2"
-    testRuntimeOnly "ch.qos.logback:logback-classic:1.2.3"
+    testRuntimeOnly 'ch.qos.logback:logback-classic:1.2.9'
 
     testImplementation "org.testcontainers:junit-jupiter:1.16.0"
     testImplementation "org.junit.jupiter:junit-jupiter-api"
